# thumbl

./: README.md  docker-compose.yml  package-lock.json  package.json
nginx/: searxng.conf
searxng/: settings.yml
src/: App.css  App.tsx  WelcomeScreen.css  WelcomeScreen.tsx  fonts.ts  useHistory.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/canvas/: PixiCanvas.tsx
src/dialogs/: EmojiPicker.css  EmojiPicker.tsx  ExportDialog.css  ExportDialog.tsx  NewCanvasDialog.css  NewCanvasDialog.tsx  QuickShareDialog.css  QuickShareDialog.tsx  ShortcutsDialog.css  ShortcutsDialog.tsx  UnsavedChangesDialog.tsx
src/menu/: MenuBar.css  MenuBar.tsx  ToolBar.css  ToolBar.tsx
src/panels/: BrowserPanel.css  BrowserPanel.tsx  EffectsPanel.css  EffectsPanel.tsx  LayersPanel.css  LayersPanel.tsx  PropertiesPanel.css  PropertiesPanel.tsx  SearchPanel.css  SearchPanel.tsx
src/project/: io.ts  recentFiles.ts
src/types/: project.ts
